@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Don't assume that our dzil and podweaver plugin bundles have the same
+  prefix.
+
+
 0.81     2017-02-01
 
 - Require Code::TidyAll 0.56 so we can use the global ignore feature in the
